--- a/RealEstateBusiness/Web.config
+++ b/RealEstateBusiness/Web.config
@@ -62,4 +62,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="BusinessContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BusinessDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
