--- a/RealEstateBusiness/RealEstateBusiness.csproj
+++ b/RealEstateBusiness/RealEstateBusiness.csproj
@@ -142,6 +142,7 @@
     </Compile>
     <Compile Include="Models\Branch.cs" />
     <Compile Include="Models\BusinessContext.cs" />
+    <Compile Include="Models\Staff.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
