--- a/RealEstateBusiness/RealEstateBusiness.csproj
+++ b/RealEstateBusiness/RealEstateBusiness.csproj
@@ -140,6 +140,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010200437329_mgr1.cs" />
+    <Compile Include="Migrations\202010200437329_mgr1.designer.cs">
+      <DependentUpon>202010200437329_mgr1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202010200456278_mgr2.cs" />
+    <Compile Include="Migrations\202010200456278_mgr2.designer.cs">
+      <DependentUpon>202010200456278_mgr2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Branch.cs" />
     <Compile Include="Models\BusinessContext.cs" />
     <Compile Include="Models\Owner.cs" />
@@ -162,6 +171,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202010200437329_mgr1.resx">
+      <DependentUpon>202010200437329_mgr1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010200456278_mgr2.resx">
+      <DependentUpon>202010200456278_mgr2.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
