--- a/RealEstateBusiness/RealEstateBusiness.csproj
+++ b/RealEstateBusiness/RealEstateBusiness.csproj
@@ -186,18 +186,14 @@
     <Content Include="Views\Rent\Index.cshtml" />
     <Content Include="Views\Rent\Create.cshtml" />
     <Content Include="Views\Branch\Create.cshtml" />
-    <Content Include="Views\Home\Branches.cshtml" />
-    <Content Include="Views\Home\StaffNames.cshtml" />
     <Content Include="Views\Home\Branch.cshtml" />
-    <Content Include="Views\Home\StaffInBranch.cshtml" />
-    <Content Include="Views\Home\StaffDetails.cshtml" />
     <Content Include="Views\Branch\Index.cshtml" />
-    <Content Include="Views\Home\Staffs.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\StaffNamesPosition.cshtml" />
     <Content Include="Views\Home\StaffInPosition.cshtml" />
     <Content Include="Views\Home\RentInBranch.cshtml" />
     <Content Include="Views\Home\Position.cshtml" />
+    <Content Include="Views\Home\City.cshtml" />
+    <Content Include="Views\Home\RentInCity.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
